Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3531

cacheurl plugin not working in 5.3.0->5.3.x

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.3.0
    • 5.3.0, 6.0.0
    • Cache, Plugins
    • None

    Description

      Hi Guys
      was working and doing tests on 5.3.0 before i could integrate it in my production servers, and while doing so i noticed some issues with cacheurl plugin and maybe other plugins but that i can not confirm.
      Here is what my observation was :

      in cacheurl.config i have
      http://s1.2mdn.net/viewad/4079501/BeitMisk_Spring_160x600_web.gif http://tested/switched.gif

      loaded cacheurl.so cacheurl.config in plugin.config
      and i confirm that i get [Apr 18 02:45:54.442] Server

      {0x2b05b69fba80}

      DIAG: (cacheurl) Adding pattern/replacement pair: 'http://s1.2mdn.net/viewad/4079501/BeitMisk_Spring_160x600_web.gif' -> 'http://tested/switched.gif'
      in traffic.out

      which says that the pattern was added correctly
      nevertheless when i do curl or wget with xdebug header request
      i get :
      X-Cache-Key: http://s1.2mdn.net/viewad/4079501/BeitMisk_Spring_160x600_web.gif

      meaning that the cacheurl plugin didn't actually do the mapping in any way possible

      Next was testing with 5.2.1 version of ATS to see how things go so i git cloned it and compiled and ran the same test again

      now i get

      X-Cache-Key: http://tested/switched.gif

      which means that cacheurl in 5.2.1 works while in latest mainstream or 5.3.0 it does not

      i shall do further tests and feed you back here

      much regards

      Attachments

        Activity

          People

            Unassigned Unassigned
            degreane Faysal Banna
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: