[TS-3531]: Ignore blank lines in the plugin config file